--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/postcss": "^4.1.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flowbite": "^4.0.0",
     "flowbite-react": "^0.12.10",
     "history": "^5.3.0",
@@ -22,6 +28,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "scheduler": "^0.27.0",
+    "tailwind-merge": "^2.5.5",
     "use-sync-external-store": "latest",
     "zustand": "^5.0.8"
   },
